# telemetry-ai

./: .gitignore  ACC-Telemetry.bat  ACC_Telemetry_Agent_Spec.md  README.md  acc-telemetry.spec  pyproject.toml  run_app.py  telemetry-ai.spec
.github/workflows/: build.yml
agent/: coach.py
agent/prompts/: examples.md  persona.md  report_format.md
analysis/: compare.py  compare_laps.py  corners.py  corners_detect.py  loader.py  plot.py  single.py
data/tracks/acc/: monza.json
data_store/: db.py  inspect.py  opponents.py  record.py  recorder.py
knowledge/: monza.md
sources/: __init__.py  acc.py  f1_25.py  iracing.py
telemetry_listener/: live_console.py  shared_memory.py
telemetry_listener/broadcast/: client.py  protocol.py
tests/: test_analysis.py  test_coach.py  test_corners_detect.py  test_f1.py  test_iracing.py  test_offline.py  test_opponents.py  test_recorder.py  test_training.py  test_webapp.py
tools/: fake_broadcast_server.py
training/: five55.py
webapp/: app.py  config.py  desktop.py  paths.py  recording.py
webapp/static/: app.js  index.html  style.css
