[project]
name = "acc-telemetry-agent"
version = "0.1.0"
description = "ACC 遙測分析工具 + AI 教練（規格見 ACC_Telemetry_Agent_Spec.md）"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",       # 階段三：圈次比較分析
    "matplotlib>=3.9",  # 階段三：視覺化
    "flask>=3.1.3",
    "pywebview>=6.2.1",
    "anthropic>=0.116.0",   # AI 教練：Anthropic 供應商
    "openai>=1.0",          # AI 教練：OpenAI / Google(相容) / local 供應商
    "pyirsdk>=1.3.6",
]

# 本專案是腳本集合（python -m ... 執行），不打包發佈
[tool.uv]
package = false
